--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,19 @@ html {
   align-items: flex-start;
 }
 
+#characterButton {
+    flex-direction: column;
+    align-items: center;
+}
+
+/* working on this */
+.modal {
+    position: absolute;
+    top: 10px;
+    right: 100px;
+    bottom: 100px;
+    left: 0;
+    z-index: 10040;
+    overflow: auto;
+    overflow-y: auto;
+ }
