--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ html {
   border-radius: 50%;
   border: 5px solid #fff;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   font-size: 20px;
   transition: all 0.3s;
