--- a/css/style.css
+++ b/css/style.css
@@ -33,19 +33,13 @@ html {
   color: #fff;
   list-style: none;
   padding: 0;
-  display: flex;
-  justify-content: space-between;
   width: 450px;
 }
 .social__item {
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  border: 5px solid #fff;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  font-size: 20px;
+  border: 5px solid #fff;font-size: 20px;
   transition: all 0.3s;
 }
 .social__item {
