--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@ html {
   flex-wrap: wrap; */
 }
 
+.container {
+  display: flex;
+  /* justify-content: space-between; */
+}
+
+
 .coolBeans {
   border: 2px solid currentColor;
   border-radius: 3rem;
