--- a/css/style.css
+++ b/css/style.css
@@ -8,22 +8,22 @@ html {
 
 .container {
   display: inline-block;
-  margin-left: 10px;
+  justify-content: space-around;
  }
 
- .savedCharacterName, .savedCharacterSpecies {
+.column {
+  display: inline-block;
+}
+
+ .savedCharacterName, .savedCharacterSpecies, .savedCharacterImage, .savedCharacterOrigin {
    color: rgb(9, 67, 226);
    text-align: center;
    font-size: large;
-   font-weight: 800;
- }
-
- .column {
-   padding:25px 75px;
+   font-weight: 900;
+   margin-left: 40px;
  }
 
 .buttons {
-  display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
