--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,13 @@ html {
    font-size: large;
    font-weight: 900;
    margin-left: 40px;
+   border: 4px solid goldenrod;
+   background-color: gray;
  }
 
 .buttons {
-  flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+
 }
 
 /* working on this */
