--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,14 @@ html {
   justify-content: space-around;
  }
 
+ .textQuote {
+   background-color: white;
+   color: teal;
+   font-weight: 600;
+   font-size: 3rem;
+   margin-top: 5rem;
+   margin-bottom: 2rem;
+ }
 /* .column {
   display: inline-block;
 } */
@@ -26,7 +34,6 @@ html {
  }
 
 .columns {
-  display: flex;
   align-items: center;
   color: #fff;
   list-style: none;
